--- a/.github/workflows/ci-production.yml
+++ b/.github/workflows/ci-production.yml
@@ -42,4 +42,5 @@ jobs:
         python -c "from tests import preparation; preparation.create_credentials_file()"
     - name: Test with pytest
       run: |
+	python -m pip install pytest
         pytest -vv
