--- a/.github/workflows/ci-production.yml
+++ b/.github/workflows/ci-production.yml
@@ -32,12 +32,11 @@ jobs:
         python -m pip install --upgrade pip
     - name: create package
       run: python setup.py sdist
-    - name: get wheel name for new version
+    - name: import open-mastr
       run: |
         version_number=$(python setup.py --version)
         wheel_name="./dist/open_mastr-"$version_number".tar.gz"
-    - name: import open-mastr
-      run: python -m pip install $wheel_name
+        python -m pip install $wheel_name
     - name: Create credentials file
       env:
         MASTR_TOKEN: ${{ secrets.MASTR_TOKEN }}
